-XX:-UseCompressedOops 关闭指针压缩 -XX:BiasedLockingStartupDelay=0 偏向锁是默认是延迟的，不会在程序启动时立即生效，如果想避免延迟，可以加VM参数 -XX:-UseBiasedLocking 禁用偏向锁